2010-10-05  Sam Steingold  <sds@gnu.org>

	* makemake.in (full): print gnulib replacements only when -verbose
	and do not fail the build when none is found

2010-10-04  Sam Steingold  <sds@gnu.org>

	* modules/syscalls/calls.c (POSIX:STRING-TIME): when calling strptime,
	init tm fields to reasonable values because strptime does not set
	fields which are not specified by datum

2010-10-04  Vladimir Tzankov  <vtzankov@gmail.com>

	* zthread.d (default_thread_name): returns name for functionp object
	(MAKE-THREAD): use it

2010-10-04  Sam Steingold  <sds@gnu.org>

	* makemake.in (full): show which system supplied functionality is
	replaced by gnulib

2010-10-03  Vladimir Tzankov  <vtzankov@gmail.com>

	fix bug#3077583: show-stack segfaults with MT
	* lispbibl.d (THREAD_LISP_STACK_START): remove
	* spvw.d (delete_thread): calculate thread stack address and free it
	* debug.d (show_stack): do not use cmpSTACKop for testing end of stack.
	FRAME == STACK_start should be correct end condition in all cases
	* zthread.d (thread_stub): no back trace for new thread

2010-10-02  Sam Steingold  <sds@gnu.org>

	* makemake.in: make charstrg.o depend on gllib

2010-09-29  Sam Steingold  <sds@gnu.org>

	do not use gnulib module getdate which should have been called get_date
	<http://article.gmane.org/gmane.comp.lib.gnulib.bugs/23310>
	* modules/syscalls/calls.c (xalloc_die): remove
	(GETDATE): condition on HAVE_GETDATE & HAVE_DECL_GETDATE_ERR
	* modules/syscalls/configure.in: do not call AC_PROG_YACC;
	check for getdate and getdate_err
	* modules/syscalls/gllib/c-ctype.c, modules/syscalls/gllib/c-ctype.h:
	* modules/syscalls/gllib/getdate.h, modules/syscalls/gllib/getdate.y:
	* modules/syscalls/gllib/gettext.h, modules/syscalls/gllib/gettime.c:
	* modules/syscalls/gllib/timespec.h, modules/syscalls/gllib/xalloc.h:
	* modules/syscalls/gllib/xmalloc.c, modules/syscalls/glm4/bison.m4:
	* modules/syscalls/glm4/clock_time.m4, modules/syscalls/glm4/error.m4: